kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rockstar-app
  namespace: rockstar
  labels:
    app: rockstar-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: rockstar-app
